# FAS

./: .gitignore  apply.py  best_LSTM.pth  check.py  checkass.py  extract_keypoints.py  history_BiLSTM.csv  history_LSTM.csv  main.py  pyproject.toml  tempCodeRunnerFile.py  train.py
dataset_processed/class_0_standard/: 1月21日 (2)(3).npy  1月21日 (2)(4).npy  1月21日 (2)(5).npy  1月21日 (2).npy  1月21日 (4)(1).npy  1月21日 (4)(2).npy  1月21日 (4).npy  1月21日 (5)(2).npy  1月21日 (5)(3).npy  1月21日 (6)(1).npy  1月21日 (6)(2).npy  1月21日 (6)(4).npy  1月21日 (6)(6).npy  1月21日 (7)(1).npy  1月21日 (7)(2).npy  1月21日 (7)(3).npy  1月21日 (7)(4).npy  2月1日 (5)(1).npy  2月1日 (5)(2).npy  2月1日 (5)(3).npy  2月1日 (5)(4).npy  2月1日 (5)(5).npy  2月1日 (5)(6).npy  2月1日 (5)(7).npy  2月1日 (5).npy
dataset_processed/class_1_binking_ass/: 1月21日 (12)(1).npy  1月21日 (12).npy  1月21日 (13)(1).npy  1月21日 (13)(3).npy  1月21日 (13).npy  1月21日 (15)(1).npy  1月21日 (16)(2).npy  1月21日 (16).npy  1月21日 (18).npy  1月21日 (19).npy  1月21日 (20).npy  (+11 more)
my-app/: base_analyzer.py  best_BiLSTM.pth  common_utils.py  package.json  pnpm-lock.yaml  pyproject.toml  server.py  squat_analyzer.py  tailwind.config.ts  tsconfig.json
my-app/app/: globals.css  layout.tsx  page.tsx
my-app/app/components/: HIword.tsx  HumanCanvas.tsx  MuscleTrainingFeature.tsx  Searchbox.tsx  Themebutton.tsx  TrainingView.tsx  WorkoutDashboard.tsx  Workoutcard.tsx  head.tsx  selectCard.tsx
my-app/app/context/: ThemeContext.tsx
my-app/app/data/: exercises.ts  muscles.tsx
my-app/app/part/: page.tsx
my-app/app/train/[action]/: page.tsx
my-app/app/workout/: page.tsx
(+45 files in other folders)
