[project]
name = "fas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.5",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.4.5",
    "uvicorn[standard]>=0.40.0",
]
